contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/storage/fail/multiple_no_ttl_extension.stderr
error: custom attribute panicked
 --> tests/ui/storage/fail/multiple_no_ttl_extension.rs:3:1
  |
3 | #[common_macros::storage]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: failed to parse storage variant for Counter: multiple #[no_ttl_extension] attributes specified: got at least 2 elements when exactly one was expected
